# nu_plugin_vector

./: Cargo.toml  README.md
queries/: component.graphql  schema.graphql
src/: lib.rs  main.rs  nu.rs  query.rs  vector.rs
