[package]
name = "nu_plugin_vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.12.0"
nu-plugin = "0.79.0"
nu-protocol = { version = "0.79.0", features = ["plugin"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
